@@ -5546,10 +5546,7 @@
   highword = adjust_address (operands[4], SImode, 0);
   lowword = adjust_address (operands[4], SImode, 4);
   if (! WORDS_BIG_ENDIAN)
-    {
-      rtx tmp;
-      tmp = highword; highword = lowword; lowword = tmp;
-    }
+    std::swap (lowword, highword);
 
   emit_insn (gen_xorsi3 (operands[6], operands[1],
 			 GEN_INT (~ (HOST_WIDE_INT) 0x7fffffff)));
@@ -5657,10 +5654,7 @@
   highword = adjust_address (operands[4], SImode, 0);
   lowword = adjust_address (operands[4], SImode, 4);
   if (! WORDS_BIG_ENDIAN)
-    {
-      rtx tmp;
-      tmp = highword; highword = lowword; lowword = tmp;
-    }
+    std::swap (lowword, highword);
 
   emit_move_insn (lowword, operands[1]);
   emit_move_insn (highword, operands[2]);
